QDatetimePicker: dark mode for ios, fix after|beforeMaxDays check

--- a/src/components/datetime/datetime.ios.styl
+++ b/src/components/datetime/datetime.ios.styl
@@ -70,6 +70,8 @@ body.desktop .q-datetime-col-wrapper
   width 100%
   backface-visibility hidden
   transform-origin center center -110px
+  .q-datetime-dark &
+    color rgba(255, 255, 255, .87)
 
 .q-datetime-mask
   position absolute
@@ -81,6 +83,8 @@ body.desktop .q-datetime-col-wrapper
   width 100%
   background linear-gradient(to top, white, rgba(255, 255, 255, 0.0) 50%, white)
   pointer-events none
+  .q-datetime-dark &
+    background linear-gradient(to top, black, rgba(0, 0, 0, 0.0) 50%, black)
 
 .q-datetime-highlight
   height 36px
